@@ -102,7 +102,7 @@ tags = {
 |null
 
 |`local_peering_gateways`
-|List of Local Peering Gateways to attach to the VCN
+|Map of Local Peering Gateways to attach to the VCN
 | e.g.
 [source]
 ----
@@ -162,10 +162,14 @@ tags = {
 |true/false
 |false
 
-|`vcn_cidr`
-|The VCN's CIDR block. The CIDR block specified for the VCN must not overlap with the CIDR block of another network.
-|
-|10.0.0.0/16
+|`vcn_cidrs`
+|The list of IPv4 CIDR blocks the VCN will use. The CIDR block specified for the VCN must not overlap with the CIDR block of another network.
+|e.g.
+[source]
+----
+["10.0.0.0/16", "172.16.0.0/16", "192.168.0.0/16"]
+----
+| `["10.0.0.0/16"]`
 
 |`vcn_dns_label`
 |The internal DNS domain for resources created and prepended to "oraclevcn.com" which is the VCN-internal domain name. *Required*
