@@ -2,7 +2,9 @@
 # Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
 
 resource "oci_core_vcn" "vcn" {
-  cidr_block     = var.vcn_cidr
+  # We still allow module users to declare a cidr using `vcn_cidr` instead of the now recommended `vcn_cidrs`, but internally we map both to `cidr_blocks`
+  # The module always use the new list of string structure and let the customer update his module definition block at his own pace. 
+  cidr_blocks    = var.vcn_cidrs[*]
   compartment_id = var.compartment_id
   display_name   = var.label_prefix == "none" ? var.vcn_name : "${var.label_prefix}-${var.vcn_name}"
   dns_label      = var.vcn_dns_label
